MegaScryptCs/MegaScryptLib/Generated/MegaScryptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from MegaScrypt.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class MegaScryptParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, True=7, False=8, Null=9, 
		Var=10, Equals=11, Underscore=12, Plus=13, Minus=14, Multiply=15, Divide=16, 
		Mod=17, LeftParenthesis=18, RightParenthesis=19, Dot=20, Comma=21, Exclamation=22, 
		Colon=23, Smaller=24, Greater=25, SmallerEql=26, GreaterEql=27, DoubleAmp=28, 
		DoubleVertical=29, DoubleEquals=30, NotEquals=31, DoublePlus=32, DoubleMinus=33, 
		PlusEql=34, MinusEql=35, TimesEql=36, DivideEql=37, Id=38, Number=39, 
		String=40, Whitespace=41, LineComment=42, BlockComment=43;
	public const int
		RULE_program = 0, RULE_statement = 1, RULE_declaration = 2, RULE_assignment = 3, 
		RULE_instantiation = 4, RULE_keyValuePairs = 5, RULE_keyValuePair = 6, 
		RULE_compoundIdentifier = 7, RULE_block = 8, RULE_elseStmt = 9, RULE_ifStmt = 10, 
		RULE_increment = 11, RULE_decrement = 12, RULE_expression = 13;
	public static readonly string[] ruleNames = {
		"program", "statement", "declaration", "assignment", "instantiation", 
		"keyValuePairs", "keyValuePair", "compoundIdentifier", "block", "elseStmt", 
		"ifStmt", "increment", "decrement", "expression"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'{'", "'}'", "'else'", "'if'", "'else if'", "'true'", "'false'", 
		"'null'", "'var'", "'='", "'_'", "'+'", "'-'", "'*'", "'/'", "'%'", "'('", 
		"')'", "'.'", "','", "'!'", "':'", "'<'", "'>'", "'<='", "'>='", "'&&'", 
		"'||'", "'=='", "'!='", "'++'", "'--'", "'+='", "'-='", "'*='", "'/='"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, "True", "False", "Null", "Var", 
		"Equals", "Underscore", "Plus", "Minus", "Multiply", "Divide", "Mod", 
		"LeftParenthesis", "RightParenthesis", "Dot", "Comma", "Exclamation", 
		"Colon", "Smaller", "Greater", "SmallerEql", "GreaterEql", "DoubleAmp", 
		"DoubleVertical", "DoubleEquals", "NotEquals", "DoublePlus", "DoubleMinus", 
		"PlusEql", "MinusEql", "TimesEql", "DivideEql", "Id", "Number", "String", 
		"Whitespace", "LineComment", "BlockComment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MegaScrypt.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static MegaScryptParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MegaScryptParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MegaScryptParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public BlockContext[] block() {
			return GetRuleContexts<BlockContext>();
		}
		public BlockContext block(int i) {
			return GetRuleContext<BlockContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 32;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__4) | (1L << Var) | (1L << DoublePlus) | (1L << DoubleMinus) | (1L << Id))) != 0)) {
				{
				State = 30;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 28; statement();
					}
					break;
				case 2:
					{
					State = 29; block();
					}
					break;
				}
				}
				State = 34;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public DeclarationContext declaration() {
			return GetRuleContext<DeclarationContext>(0);
		}
		public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public IncrementContext increment() {
			return GetRuleContext<IncrementContext>(0);
		}
		public DecrementContext decrement() {
			return GetRuleContext<DecrementContext>(0);
		}
		public InstantiationContext instantiation() {
			return GetRuleContext<InstantiationContext>(0);
		}
		public IfStmtContext ifStmt() {
			return GetRuleContext<IfStmtContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 45;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Var:
			case DoublePlus:
			case DoubleMinus:
			case Id:
				EnterOuterAlt(_localctx, 1);
				{
				State = 40;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
				case 1:
					{
					State = 35; declaration();
					}
					break;
				case 2:
					{
					State = 36; assignment();
					}
					break;
				case 3:
					{
					State = 37; increment();
					}
					break;
				case 4:
					{
					State = 38; decrement();
					}
					break;
				case 5:
					{
					State = 39; instantiation();
					}
					break;
				}
				State = 42; Match(T__0);
				}
				break;
			case T__4:
				EnterOuterAlt(_localctx, 2);
				{
				State = 44; ifStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		public ITerminalNode Var() { return GetToken(MegaScryptParser.Var, 0); }
		public ITerminalNode Id() { return GetToken(MegaScryptParser.Id, 0); }
		public ITerminalNode Equals() { return GetToken(MegaScryptParser.Equals, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public CompoundIdentifierContext compoundIdentifier() {
			return GetRuleContext<CompoundIdentifierContext>(0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47; Match(Var);
			State = 48; Match(Id);
			State = 54;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Equals) {
				{
				State = 49; Match(Equals);
				State = 52;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
				case 1:
					{
					State = 50; expression(0);
					}
					break;
				case 2:
					{
					State = 51; compoundIdentifier();
					}
					break;
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		public ITerminalNode Id() { return GetToken(MegaScryptParser.Id, 0); }
		public ITerminalNode Equals() { return GetToken(MegaScryptParser.Equals, 0); }
		public ITerminalNode PlusEql() { return GetToken(MegaScryptParser.PlusEql, 0); }
		public ITerminalNode MinusEql() { return GetToken(MegaScryptParser.MinusEql, 0); }
		public ITerminalNode TimesEql() { return GetToken(MegaScryptParser.TimesEql, 0); }
		public ITerminalNode DivideEql() { return GetToken(MegaScryptParser.DivideEql, 0); }
		public CompoundIdentifierContext compoundIdentifier() {
			return GetRuleContext<CompoundIdentifierContext>(0);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(Context, State);
		EnterRule(_localctx, 6, RULE_assignment);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56; Match(Id);
			State = 57;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Equals) | (1L << PlusEql) | (1L << MinusEql) | (1L << TimesEql) | (1L << DivideEql))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 60;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				State = 58; compoundIdentifier();
				}
				break;
			case 2:
				{
				State = 59; expression(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstantiationContext : ParserRuleContext {
		public ITerminalNode Var() { return GetToken(MegaScryptParser.Var, 0); }
		public ITerminalNode Id() { return GetToken(MegaScryptParser.Id, 0); }
		public KeyValuePairsContext keyValuePairs() {
			return GetRuleContext<KeyValuePairsContext>(0);
		}
		public InstantiationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instantiation; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstantiation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstantiationContext instantiation() {
		InstantiationContext _localctx = new InstantiationContext(Context, State);
		EnterRule(_localctx, 8, RULE_instantiation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62; Match(Var);
			State = 63; Match(Id);
			State = 64; Match(T__1);
			State = 65; keyValuePairs();
			State = 66; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class KeyValuePairsContext : ParserRuleContext {
		public KeyValuePairContext[] keyValuePair() {
			return GetRuleContexts<KeyValuePairContext>();
		}
		public KeyValuePairContext keyValuePair(int i) {
			return GetRuleContext<KeyValuePairContext>(i);
		}
		public ITerminalNode[] Comma() { return GetTokens(MegaScryptParser.Comma); }
		public ITerminalNode Comma(int i) {
			return GetToken(MegaScryptParser.Comma, i);
		}
		public KeyValuePairsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_keyValuePairs; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitKeyValuePairs(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public KeyValuePairsContext keyValuePairs() {
		KeyValuePairsContext _localctx = new KeyValuePairsContext(Context, State);
		EnterRule(_localctx, 10, RULE_keyValuePairs);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68; keyValuePair();
			State = 73;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Comma) {
				{
				{
				State = 69; Match(Comma);
				State = 70; keyValuePair();
				}
				}
				State = 75;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class KeyValuePairContext : ParserRuleContext {
		public ITerminalNode Id() { return GetToken(MegaScryptParser.Id, 0); }
		public ITerminalNode Colon() { return GetToken(MegaScryptParser.Colon, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public KeyValuePairContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_keyValuePair; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitKeyValuePair(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public KeyValuePairContext keyValuePair() {
		KeyValuePairContext _localctx = new KeyValuePairContext(Context, State);
		EnterRule(_localctx, 12, RULE_keyValuePair);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76; Match(Id);
			State = 77; Match(Colon);
			State = 78; expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CompoundIdentifierContext : ParserRuleContext {
		public ITerminalNode[] Id() { return GetTokens(MegaScryptParser.Id); }
		public ITerminalNode Id(int i) {
			return GetToken(MegaScryptParser.Id, i);
		}
		public ITerminalNode[] Dot() { return GetTokens(MegaScryptParser.Dot); }
		public ITerminalNode Dot(int i) {
			return GetToken(MegaScryptParser.Dot, i);
		}
		public CompoundIdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compoundIdentifier; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompoundIdentifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompoundIdentifierContext compoundIdentifier() {
		CompoundIdentifierContext _localctx = new CompoundIdentifierContext(Context, State);
		EnterRule(_localctx, 14, RULE_compoundIdentifier);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80; Match(Id);
			State = 85;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Dot) {
				{
				{
				State = 81; Match(Dot);
				State = 82; Match(Id);
				}
				}
				State = 87;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 16, RULE_block);
		int _la;
		try {
			State = 97;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 88; Match(T__1);
				State = 92;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << Var) | (1L << DoublePlus) | (1L << DoubleMinus) | (1L << Id))) != 0)) {
					{
					{
					State = 89; statement();
					}
					}
					State = 94;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 95; Match(T__2);
				}
				break;
			case T__4:
			case Var:
			case DoublePlus:
			case DoubleMinus:
			case Id:
				EnterOuterAlt(_localctx, 2);
				{
				State = 96; statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElseStmtContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ElseStmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elseStmt; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElseStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElseStmtContext elseStmt() {
		ElseStmtContext _localctx = new ElseStmtContext(Context, State);
		EnterRule(_localctx, 18, RULE_elseStmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99; Match(T__3);
			State = 100; block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfStmtContext : ParserRuleContext {
		public ITerminalNode[] LeftParenthesis() { return GetTokens(MegaScryptParser.LeftParenthesis); }
		public ITerminalNode LeftParenthesis(int i) {
			return GetToken(MegaScryptParser.LeftParenthesis, i);
		}
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode[] RightParenthesis() { return GetTokens(MegaScryptParser.RightParenthesis); }
		public ITerminalNode RightParenthesis(int i) {
			return GetToken(MegaScryptParser.RightParenthesis, i);
		}
		public BlockContext[] block() {
			return GetRuleContexts<BlockContext>();
		}
		public BlockContext block(int i) {
			return GetRuleContext<BlockContext>(i);
		}
		public ElseStmtContext elseStmt() {
			return GetRuleContext<ElseStmtContext>(0);
		}
		public IfStmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifStmt; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfStmtContext ifStmt() {
		IfStmtContext _localctx = new IfStmtContext(Context, State);
		EnterRule(_localctx, 20, RULE_ifStmt);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 102; Match(T__4);
			State = 103; Match(LeftParenthesis);
			State = 104; expression(0);
			State = 105; Match(RightParenthesis);
			State = 106; block();
			State = 115;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,11,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 107; Match(T__5);
					State = 108; Match(LeftParenthesis);
					State = 109; expression(0);
					State = 110; Match(RightParenthesis);
					State = 111; block();
					}
					} 
				}
				State = 117;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,11,Context);
			}
			State = 119;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,12,Context) ) {
			case 1:
				{
				State = 118; elseStmt();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IncrementContext : ParserRuleContext {
		public ITerminalNode Id() { return GetToken(MegaScryptParser.Id, 0); }
		public ITerminalNode DoublePlus() { return GetToken(MegaScryptParser.DoublePlus, 0); }
		public IncrementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_increment; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIncrement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IncrementContext increment() {
		IncrementContext _localctx = new IncrementContext(Context, State);
		EnterRule(_localctx, 22, RULE_increment);
		try {
			State = 125;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Id:
				EnterOuterAlt(_localctx, 1);
				{
				State = 121; Match(Id);
				State = 122; Match(DoublePlus);
				}
				break;
			case DoublePlus:
				EnterOuterAlt(_localctx, 2);
				{
				State = 123; Match(DoublePlus);
				State = 124; Match(Id);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DecrementContext : ParserRuleContext {
		public ITerminalNode Id() { return GetToken(MegaScryptParser.Id, 0); }
		public ITerminalNode DoubleMinus() { return GetToken(MegaScryptParser.DoubleMinus, 0); }
		public DecrementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_decrement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDecrement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DecrementContext decrement() {
		DecrementContext _localctx = new DecrementContext(Context, State);
		EnterRule(_localctx, 24, RULE_decrement);
		try {
			State = 131;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Id:
				EnterOuterAlt(_localctx, 1);
				{
				State = 127; Match(Id);
				State = 128; Match(DoubleMinus);
				}
				break;
			case DoubleMinus:
				EnterOuterAlt(_localctx, 2);
				{
				State = 129; Match(DoubleMinus);
				State = 130; Match(Id);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ITerminalNode Number() { return GetToken(MegaScryptParser.Number, 0); }
		public ITerminalNode Id() { return GetToken(MegaScryptParser.Id, 0); }
		public ITerminalNode True() { return GetToken(MegaScryptParser.True, 0); }
		public ITerminalNode False() { return GetToken(MegaScryptParser.False, 0); }
		public ITerminalNode Null() { return GetToken(MegaScryptParser.Null, 0); }
		public ITerminalNode String() { return GetToken(MegaScryptParser.String, 0); }
		public ITerminalNode LeftParenthesis() { return GetToken(MegaScryptParser.LeftParenthesis, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode RightParenthesis() { return GetToken(MegaScryptParser.RightParenthesis, 0); }
		public ITerminalNode Minus() { return GetToken(MegaScryptParser.Minus, 0); }
		public ITerminalNode Exclamation() { return GetToken(MegaScryptParser.Exclamation, 0); }
		public ITerminalNode Multiply() { return GetToken(MegaScryptParser.Multiply, 0); }
		public ITerminalNode Divide() { return GetToken(MegaScryptParser.Divide, 0); }
		public ITerminalNode Mod() { return GetToken(MegaScryptParser.Mod, 0); }
		public ITerminalNode Plus() { return GetToken(MegaScryptParser.Plus, 0); }
		public ITerminalNode Smaller() { return GetToken(MegaScryptParser.Smaller, 0); }
		public ITerminalNode Greater() { return GetToken(MegaScryptParser.Greater, 0); }
		public ITerminalNode SmallerEql() { return GetToken(MegaScryptParser.SmallerEql, 0); }
		public ITerminalNode GreaterEql() { return GetToken(MegaScryptParser.GreaterEql, 0); }
		public ITerminalNode DoubleEquals() { return GetToken(MegaScryptParser.DoubleEquals, 0); }
		public ITerminalNode NotEquals() { return GetToken(MegaScryptParser.NotEquals, 0); }
		public ITerminalNode DoubleAmp() { return GetToken(MegaScryptParser.DoubleAmp, 0); }
